[package]
name = "research_eu_downloader"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
tokio = { version = "0.2.21", features = ["full"] }
serde = { version = "1.0.111", features = ["derive"] }
quick-xml = { version = "0.18.1", features = ["serialize"] }
