[package]
name = "research_eu_downloader"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["stream"] }
tokio = { version = "0.2.21", features = ["full"] }
serde = { version = "1.0.111", features = ["derive"] }
quick-xml = { version = "0.18.1", features = ["serialize"] }
log = "0.4.8"
env_logger = "0.7.1"
indicatif = "0.14.0"
